--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "prerrogativas",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://app.na.tec.br/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
+    "downloadjs": "^1.4.7",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media-devices": "^1.1.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.1.1",
+    "recordrtc": "^5.6.2",
+    "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
